# socketlib

./: .gitignore  CMakeLists.txt  NEW_ADDR_IDEA.txt  README.md  a  a.cpp  a.out  b  b.cpp  cl  d.cpp  e  e.cpp  goscket.hh  gsocket.hh  gsocket.hpp  gurguito.cpp  i  ifaces.cpp  nonblock_tcp_example.cpp  prototype.hh  s  sender.cpp  sv  sv.cpp  t  t.cpp  tcp6_sv.cpp  tcp_server  tcp_sv.cpp  udpsniff
doxygen/: socketlib.doxygen.conf
doxygen/html/: annotated.html  classSocket-members.html  classSocket.html  classes.html  classgsocket_1_1Pipe-members.html  classgsocket_1_1Pipe.html  classgsocket_1_1____socket__operations-members.html  classgsocket_1_1____socket__operations.html  classgsocket_1_1____sw-members.html  classgsocket_1_1____sw.html  dir_018e9aafb459e6e1a4953404cb0c0b1d.html  dir_2dfd9a47d106f496c502bd907e9765a5.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_c72b25b75abe208498b36a3e44a3726c.html  dir_dd9bd685e9a1d79d056f47f07a3eee08.html  enums_8hh_source.html  fd_8hpp_source.html  files.html  functions.html  functions_func.html  group__connect__overloads.html  hierarchy.html  index.html  menudata.js  net_8hpp_source.html  networking_8h_source.html  pipe_8hpp_source.html  socket_8hh_source.html  socket_8hpp_source.html  socket__wrapper_8hh_source.html  structAddr4-members.html  structAddr4.html  structAddr6-members.html  structAddr6.html  structAddress-members.html  structAddress.html  structSocket-members.html  structSocket.html  (+13 more)
doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  searchdata.js
doxygen/latex/: annotated.tex  classSocket.eps  classSocket.tex  classgsocket_1_1Pipe.tex  classgsocket_1_1____socket__operations.eps  classgsocket_1_1____socket__operations.tex  classgsocket_1_1____sw.eps  classgsocket_1_1____sw.tex  enums_8hh_source.tex  fd_8hpp_source.tex  files.tex  group__connect__overloads.tex  hierarchy.tex  net_8hpp_source.tex  networking_8h_source.tex  pipe_8hpp_source.tex  refman.tex  socket_8hh_source.tex  socket_8hpp_source.tex  socket__wrapper_8hh_source.tex  structAddr4.tex  structAddr6.tex  structAddress.tex  structSocket.eps  structSocket.tex  structaddressInfo.tex  structgsocket_1_1addressInfo.tex  structgsocket_1_1socketPreferences.tex  structmsgFrom.tex  structs_8hpp_source.tex  structsocketPreferences.tex  topics.tex  utils_8hh_source.tex
examples/: GET_request_getaddrinfo.cpp  awaitData_timeout.cpp  socket_pair.cpp  tcp_client.cpp  tcp_server.cpp  tcp_socket.cpp  udp_client.cpp  udp_server_read.cpp  udp_server_recvfrom.cpp  udp_socket.cpp
examples/local/: cl  cl.cpp  sv  sv.cpp
examples/monitoring/: afulldup_client_monitored.cpp  monitoring_server.cpp  test.cpp
examples/posix/: tcp6_cl.cpp  tcp6_sv.cpp
examples/rshell/: rshell.cpp
examples/tcp/: ipv4_server.cpp  ipv6_client.cpp  ipv6_server.cpp  multiclient_sv.cpp  simple_client.cpp  simple_tcp_server.cpp  tcp_socket.cpp
examples/tcp/ipv4/: ipv4_client.cpp  ipv4_server.cpp  tcp4_cl.cpp  tcp4_sv.cpp
examples/tcp/ipv6/: tcp6_cl.cpp  tcp6_sv.cpp
examples/templates/: template.cpp
examples/udp/: udp_socket.cpp
examples/udp/ipv4/: udp4_cl.cpp  udp4_sv.cpp  udp_client.cpp  udp_server_read.cpp  udp_server_recvfrom.cpp
examples/udp/ipv6/: ipv6_udp_client.cpp  ipv6_udp_server.cpp  udp6_cl.cpp  udp6_sv.cpp
scripts/: .install.debug  .installpaths  .uninstall.debug  install.sh  reinstall.sh  uninstall.sh  unistall.sh
socketlib2.0/: CMakeLists.txt  a.out  cl.cpp  enums.hh  m  main.cpp  socket.hh  socket_wrapper.cpp  socket_wrapper.hh  t  t.cpp
socketlib2.0/examples/: tcp4_sv.cpp  udp4_cl.cpp  udp4_sv.cpp
socketlib2.0/examples/tcp/ipv6/: cl  sv
socketlib2.0/examples/templates/: template.cpp
socketlib2.0/examples/udp/ipv4/: udp4_sv.cpp
socketlib2.0/examples/udp/ipv6/: udp6_cl.cpp
socketlib2.0/lib/: a.cpp  a.out
socketlib2.0/prototype/: test.hh
socketlib2.0/scripts/: install.sh  reinstall.sh  unistall.sh
socketlib2.0/src/: gsocket  gsocket.hh  socket.cpp  socket.hh  socket_wrapper  socket_wrapper.cpp  socket_wrapper.hh  utils  utils.cpp  utils.hh
socketlib2.0/tcp_classes/: tcpClient  tcpClient.cpp  tcpClient.hh  tcpServer  tcpServer.cpp  tcpServer.hh  tcp_client.cpp  tcp_client.hh  tcp_server.cpp  tcp_server.hh  tcp_socket.cpp  tcp_socket.hh
socketlib2.0/templates/: gsocket_templates  templates
socketlib2.0/test/: a  a.cpp  b  b.cpp  c  cl  cl.cpp  sv  sv.cpp
socketlib2.0/udp_classes/: udpClient  udpClient.cpp  udpClient.hh  udpServer  udpServer.cpp  udpServer.hh
src/: enums.hh  enums.hpp  socket  socket.cpp  socket.hh  socket.hpp  socket_wrapper  socket_wrapper.hh  structs.hpp  templates  utils  utils.cpp  utils.hh
src/classes/pipe/: pipe.cpp  pipe.hpp
src/classes/tcp/: tcpClient.cpp  tcpClient.hpp  tcpServer.cpp  tcpServer.hpp
src/core/: __base_socket.cpp  __base_socket.hpp  socket_wrapper  socket_wrapper.cpp  socket_wrapper.hh  socket_wrapper.hpp
src/core/implementations/: await.cpp  duplicate.cpp  getaddress.cpp  recv.cpp  send.cpp
src/monitoring/: socket_monitor.cpp  socket_monitor.hpp
src/pipe/: namedpipe.cpp  namedpipe.hpp  pipe.cpp  pipe.hpp
src/posix_wrapped_functions/: accept  accept.cpp  await  await.cpp  bind  bind.cpp  close  close.cpp  connect  connect.cpp  getpeername  getpeername.cpp  getsockname  getsockname.cpp  listen  listen.cpp  recv  recv.cpp  recvfrom  recvfrom.cpp  send  send.cpp  sendto  sendto.cpp
src/sockets/local/: localsocket.cpp  localsocket.hpp
src/utils/: dnsflags.cpp  dnsflags.hpp  fd.cpp  fd.hpp  net.cpp  net.hpp  socket.hpp  socket_generator.hpp
tcp_classes/: tcpClient  tcpClient.hh  tcpServer  tcpServer.hh
templates/: templates  templates.cpp  templates.hh  templates.hpp
testing/: bufferclass.cpp
udp_classes/: udpClient  udpClient.hh  udpServer  udpServer.hh
(+8 files in other folders)
